Make use of the MiGBase64 (http://sourceforge.net/projects/migbase64/) implementation